[tool.poetry]
name = "graphtest"
version = "0.1.0"
description = ""
authors = ["ahMADASSadi <ds1380ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-graphql-jwt = "^0.4.0"
django = "^5.1.6"
graphene-django = "^3.2.2"
django-filter = "^25.1"
pillow = "^11.1.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
django-environ = "^0.12.0"
environ = "^1.0"
django-celery-beat = "^2.7.0"
celery = "^5.4.0"
django-debug-toolbar = "^5.0.1"
psycopg2 = "^2.9.10"
django-redis = "^5.4.0"
gunicorn = "^23.0.0"
flower = "^2.0.1"
django-admin-interface = "^0.29.4"
locust = "^2.33.1"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
